# mini_pupper_trajopt

./: .gitignore  LICENSE  README.md  setup.py
examples/: bounding.py  jumping.py  pacing.py  running.py  trotting_slow.py
mini_pupper_config/: README.md  config.json
mini_pupper_config/config/gait/: gait.yaml
mini_pupper_config/include/: gait_config.h  quadruped_description.h
mini_pupper_config/launch/: bringup.launch
mini_pupper_controller/: CMakeLists.txt  bounding_controller_description.xml  controller_description.xml  jumping_controller_description.xml  pacing_controller_description.xml  package.xml  running_controller_description.xml  trotting_controller_description.xml
mini_pupper_controller/config/: mini_pupper_controller.yaml
mini_pupper_controller/include/mini_pupper_controller/: mini_pupper_bounding_controller.hpp  mini_pupper_controller.hpp  mini_pupper_jumping_controller.hpp  mini_pupper_pacing_controller.hpp  mini_pupper_running_controller.hpp  mini_pupper_trotting_controller.hpp
mini_pupper_controller/src/: mini_pupper_bounding_controller.cpp  mini_pupper_controller.cpp  mini_pupper_jumping_controller.cpp  mini_pupper_pacing_controller.cpp  mini_pupper_running_controller.cpp  mini_pupper_trotting_controller.cpp
mini_pupper_description/: package.xml
mini_pupper_description/urdf/: mini_pupper_description.urdf
mini_pupper_gazebo/: CMakeLists.txt  package.xml
mini_pupper_gazebo/config/: mini_pupper_gazebo_bounding_controller.yaml  mini_pupper_gazebo_controller.yaml  mini_pupper_gazebo_jumping_controller.yaml  mini_pupper_gazebo_pacing_controller.yaml  mini_pupper_gazebo_running_controller.yaml  mini_pupper_gazebo_trotting_controller.yaml
mini_pupper_gazebo/launch/: mini_pupper.launch  mini_pupper_bounding.launch  mini_pupper_jumping.launch  mini_pupper_pacing.launch  mini_pupper_running.launch  mini_pupper_trotting.launch
mini_pupper_trajopt/: CMakeLists.txt  MANIFEST.in  __init__.py  bounding.py  jumping.py  pacing.py  package.xml  running.py  setup.py  trajectory_optimizer.py  trotting.py  trotting_slow.py
mini_pupper_trajopt/examples/: bounding.py  running.py  trotting.py
mini_pupper_trajopt/mini_pupper_trajopt/: __init__.py  bounding.py  config.py  jumping.py  logger.py  pacing.py  running.py  trajectory_optimizer.py  trotting.py
mini_pupper_trajopt/scripts/: bounding.py  jumping.py  pacing.py  running.py  trotting.py  trotting_slow.py
mini_pupper_trajopt/scripts/mini_pupper_trajopt/: bounding.py  config.py  jumping.py  pacing.py  running.py  trajectory_optimizer.py  trotting.py
mini_pupper_trajopt/trajopt/: bounding.py  jumping.py  pacing.py  running.py  trotting.py
mini_pupper_trajopt/trajopt/mini_pupper_trajopt/: jumping.py  logger.py  running.py
trajopt/: bounding.py  config.py  jumping.py  pacing.py  server.py  trotting.py  trotting_slow.py
