<?xml version="1.0"?>
<package format="2">
  <name>mini_pupper_controller</name>
  <version>1.0.0</version>
  <description>Mini pupper controller package</description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mini_pupper_trajopt</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/controller_description.xml" />
  </export>
</package>