<?xml version="1.0"?>
<package format="2">
  <name>mini_pupper_gazebo</name>
  <version>0.0.0</version>
  <description>Mini pupper Gazebo package</description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <exec_depend>roboticsgroup_upatras_gazebo_plugins</exec_depend>
  <exec_depend>roslang</exec_depend>
  <exec_depend>urdf_parser_plugin</exec_depend>
  <exec_depend>mini_pupper_controller</exec_depend>
</package>